Fixed wrapping lines on Firefox.

--- a/assets/css/application.styl
+++ b/assets/css/application.styl
@@ -2233,7 +2233,7 @@ room-members-sidebar-width = 200px
 
   .add-text
     box-sizing border-box
-    width 191px
+    width 185px
     margin 0 5px 5px 0
     padding 8px 6px
     font-size 14px
